--- a/src/components/FormBuild/formbuild.css
+++ b/src/components/FormBuild/formbuild.css
@@ -41,6 +41,14 @@
   background-color: #e9ecef;
 }
 
+.sample-textarea{
+  /* resize: none; */
+  max-width: 100%;
+  min-width: 100%;
+  min-height: 1rem;
+  max-height: 1rem;
+}
+
 .draggablezone-grid .item-info{
   font-size: .8rem;
   display: flex;
