--- a/src/components/FormBuild/DroppableZone/droppablezone.css
+++ b/src/components/FormBuild/DroppableZone/droppablezone.css
@@ -8,9 +8,11 @@
 .droppable-items {
   border: 1px solid rgb(182, 182, 182);
   border-radius: 5px;
-  padding: 6px;
-  margin: 6px;
+  margin: 2px 6px;
+  padding-top: .5rem;
   cursor: pointer;
+  /* background-color: white; */
+  font-size: 13px;
 }
 
 .droppable-items:hover{
@@ -18,10 +20,21 @@
 }
 
 .droppable-items-selected {
-  border: 1px solid rgb(224, 130, 130);
+  border: 1px solid #0275d8;
   border-radius: 5px;
-  padding: 6px;
-  margin: 6px;
+  margin: 2px 6px;
   cursor: pointer;
+  font-size: 13px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.droppable-items .item-heading{
+  margin: 0 .5rem;
+
+  font-weight: 500;
+  border-bottom: 1px solid gray;
+}
+
+.droppable-items .item-body{
+  padding: .6rem 0.5rem
 }
